@@ -1,3 +1,8 @@
+2015-03-06  Carl Hetherington  <cth@carlh.net>
+
+	* Only allow even DCP channel counts of
+	2 or more.
+
 2015-03-04  Carl Hetherington  <cth@carlh.net>
 
 	* Speculative fix to certificate not being
